// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotesService toNoteDto works 1`] = `
{
  "content": "mockContent",
  "editedByAtPosition": [],
  "metadata": {
    "aliases": [
      {
        "name": "testAlias",
        "noteId": "testId",
        "primaryAlias": true,
      },
    ],
    "createdAt": "2019-02-04T20:34:12.000Z",
    "description": "mockDescription",
    "editedBy": [
      "hardcoded",
    ],
    "id": "testId",
    "permissions": {
      "owner": "hardcoded",
      "sharedToGroups": [
        {
          "canEdit": true,
          "groupName": "testGroup",
        },
      ],
      "sharedToUsers": [
        {
          "canEdit": true,
          "username": "hardcoded",
        },
      ],
    },
    "primaryAddress": "testAlias",
    "tags": [
      "tag1",
    ],
    "title": "mockTitle",
    "updateUsername": "hardcoded",
    "updatedAt": "2019-02-04T20:34:12.000Z",
    "version": undefined,
    "viewCount": 1337,
  },
}
`;

exports[`NotesService toNoteMetadataDto works 1`] = `
{
  "aliases": [
    {
      "name": "testAlias",
      "noteId": "testId",
      "primaryAlias": true,
    },
  ],
  "createdAt": "2019-02-04T20:34:12.000Z",
  "description": "mockDescription",
  "editedBy": [
    "hardcoded",
  ],
  "id": "testId",
  "permissions": {
    "owner": "hardcoded",
    "sharedToGroups": [
      {
        "canEdit": true,
        "groupName": "testGroup",
      },
    ],
    "sharedToUsers": [
      {
        "canEdit": true,
        "username": "hardcoded",
      },
    ],
  },
  "primaryAddress": "testAlias",
  "tags": [
    "tag1",
  ],
  "title": "mockTitle",
  "updateUsername": "hardcoded",
  "updatedAt": "2019-02-04T20:34:12.000Z",
  "version": undefined,
  "viewCount": 1337,
}
`;

exports[`NotesService toNotePermissionsDto works 1`] = `
{
  "owner": "hardcoded",
  "sharedToGroups": [
    {
      "canEdit": true,
      "groupName": "testGroup",
    },
  ],
  "sharedToUsers": [
    {
      "canEdit": true,
      "username": "hardcoded",
    },
  ],
}
`;
